@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="73">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KWord" version="74">
 <MenuBar>
  <Menu name="file"><text>&amp;File</text>
   <Action name="extra_template"/>
@@ -140,6 +140,7 @@
   <Separator/>
   <Action name="table_stylist"/>
   <Action name="table_stylemenu"/>
+  <Action name="convert_table_to_text"/>
  </Menu>
  <Menu name="tools"><text>&amp;Tools</text>
   <Menu name="SpellCheck"><text>Spellcheck</text>
